--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.10"
 django = "^5.1.6"
 psycopg = "^3.2.4"
 djangorestframework = "^3.15.2"
+pillow = "^11.1.0"
+djangorestframework-simplejwt = "^5.4.0"
+ruff = "^0.9.6"
 
 
 [build-system]
