--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,13 @@ djangorestframework = "^3.15.2"
 pillow = "^11.1.0"
 djangorestframework-simplejwt = "^5.4.0"
 ruff = "^0.9.6"
+pytest = "^8.3.4"
+pytest-django = "^4.10.0"
+factory-boy = "^3.3.3"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-xdist = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core"]
