--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ ruff = "^0.9.6"
 pytest = "^8.3.4"
 pytest-django = "^4.10.0"
 factory-boy = "^3.3.3"
+ipdb = "^0.13.13"
 
 
 [tool.poetry.group.dev.dependencies]
