--- a/moodmap/android/build.gradle
+++ b/moodmap/android/build.gradle
@@ -5,6 +5,10 @@ allprojects {
     }
 }
 
+dependencies {
+    classpath 'com.android.tools.build:gradle:8.5.0'
+}
+
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
