--- a/moodmap/pubspec.yaml
+++ b/moodmap/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^4.0.4
   duration_picker: ^1.2.0
   flutter_map: ^4.0.0
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.14
+  freezed: ^2.5.8
+  json_serializable: ^6.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
