-fix for android

--- a/moodmap/android/build.gradle
+++ b/moodmap/android/build.gradle
@@ -5,8 +5,14 @@ allprojects {
     }
 }
 
-dependencies {
-    classpath 'com.android.tools.build:gradle:8.5.0'
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.1'
+    }
 }
 
 rootProject.buildDir = '../build'
