--- a/moodmap/android/build.gradle
+++ b/moodmap/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.5.0'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -5,15 +15,9 @@ allprojects {
     }
 }
 
-dependencies {
-    classpath 'com.android.tools.build:gradle:8.5.0'
-}
-
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(':app')
 }
 
