--- a/moodmap/pubspec.yaml
+++ b/moodmap/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_map: ^4.0.0
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  flutter_secure_storage: ^4.2.1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
